# papolo

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: bump-bot-submodule.yml
papolo/: __init__.py  agent.py  cli.py  deepseek.py  deploy.py  pipeline.py  prompts.py  skills.py  stackpick.py  subagents.py  tools.py
skills/_TEMPLATE/: SKILL.md
skills/agent-browser/: SKILL.md
skills/code-review/: SKILL.md
skills/coolify-deploy/: SKILL.md
skills/debugging-systematic/: SKILL.md
skills/git-workflow/: SKILL.md
skills/production-quality/: SKILL.md
skills/professional-ui-design/: SKILL.md
skills/reachability-audit/: SKILL.md
skills/realtime-architecture/: SKILL.md
skills/refactoring-safely/: SKILL.md
skills/search-docs/: SKILL.md
skills/system-architecture/: SKILL.md
skills/ui-ux-pro-max/: SKILL.md
skills/ux-methodology/: SKILL.md
skills/web-search/: SKILL.md
skills/writing-tests/: SKILL.md
subagents/: _TEMPLATE.md  fastapi-expert.md  flutter-dart-expert.md  golang-fiber-expert.md  mongodb-expert.md  planner.md  react-typescript-expert.md  rust-actix-expert.md  sveltekit-expert.md
