[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "papolo"
version = "0.1.0"
description = "DeepSeek-powered agent with subagents and skills"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "requests>=2.32",
]

[project.scripts]
papolo = "papolo.cli:main"

[tool.setuptools.packages.find]
include = ["papolo*"]
